# vmdk-forensic

./: .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml
.claude/: settings.json
.github/workflows/: ci.yml  fuzz.yml
.playwright-mcp/: page-2026-06-02T00-02-37-025Z.yml  page-2026-06-02T00-02-42-302Z.yml  page-2026-06-02T00-02-58-082Z.yml  page-2026-06-02T00-03-57-856Z.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: chain.rs  descriptor.rs  testutil.rs
docs/: corpus-validation.md  validation.md
forensic/: Cargo.toml
forensic/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_forensic.rs  fuzz_read.rs  fuzz_recover.rs
vmdk/: Cargo.toml
vmdk-cli/: Cargo.toml
vmdk-cli/src/: main.rs
vmdk-cli/tests/: cli.rs
vmdk-forensic/: Cargo.toml  README.md
vmdk-forensic/src/: lib.rs
vmdk-forensic/tests/: corpus.rs
vmdk/src/: chain.rs  cowd.rs  ddb.rs  descriptor.rs  diag.rs  error.rs  flat.rs  header.rs  lib.rs  read.rs  sesparse.rs  sparse_multi.rs  testutil.rs
vmdk/tests/: corpus.rs  real_images.rs  synthetic.rs
vmdk/tests/data/: README.md  compressed_stream_opt.vmdk  mono_flat.vmdk  ms3-win.vmdk  tw_sparse-s001.vmdk  tw_sparse.vmdk  tw_sparse_data.vmdk
