[workspace]
resolver = "2"
members = ["core", "forensic", "cli"]

# Single source of truth for fields shared by every member (DRY): bump version /
# MSRV / license here once; members inherit via `field.workspace = true`.
[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/SecurityRonin/vmdk-forensic"

# Single source of truth for dependency versions (DRY): declare each once;
# members write `dep.workspace = true`. The inter-crate `vmdk` version lives here
# too, so a bump touches one line instead of every member + dev-dep + cli.
[workspace.dependencies]
vmdk = { path = "core", version = "0.7.0", package = "vmdk-core" }
forensicnomicon = "0.5"
encoding_rs = "0.8"
thiserror = "2"
tracing = "0.1"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
md-5 = "0.10"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tempfile = "3"
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic              = { level = "warn", priority = -1 }
correctness           = { level = "deny",  priority = -1 }
suspicious            = { level = "deny",  priority = -1 }
unwrap_used           = { level = "deny",  priority = 0  }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate    = { level = "allow", priority = 1 }
missing_errors_doc    = { level = "allow", priority = 1 }
missing_panics_doc    = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap    = { level = "allow", priority = 1 }
cast_sign_loss        = { level = "allow", priority = 1 }
cast_precision_loss   = { level = "allow", priority = 1 }
too_many_lines        = { level = "allow", priority = 1 }
items_after_statements = { level = "allow", priority = 1 }
similar_names         = { level = "allow", priority = 1 }
manual_let_else       = { level = "allow", priority = 1 }
