[package]
name         = "vmdk-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description  = "CLI tool for inspecting VMDK disk images"
license.workspace = true
repository.workspace = true
keywords     = ["forensics", "vmdk", "disk-image", "vmware"]
categories   = ["command-line-utilities", "filesystem"]
readme       = "../README.md"

[[bin]]
name = "vmdk"
path = "src/main.rs"

[dependencies]
vmdk = { workspace = true }
vmdk-forensic = { version = "0.7.0", path = "../forensic" }
# Canonical reporting vocabulary (Severity/Finding/Category) — every fleet crate
# that touches reporting depends on forensicnomicon directly, the single source of truth.
# serde feature: Finding serializes into the `--json` output.
forensicnomicon = { workspace = true, features = ["serde"] }
clap = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# test-helpers exposes vmdk::testutil so e2e tests can synthesise fixtures
# (deltas, matching-RGD images, differing-content pairs) for full CLI coverage.
vmdk = { workspace = true, features = ["test-helpers"] }

[lints]
workspace = true
