[package]
name         = "vmdk-core"
version      = "0.7.0"
edition      = "2021"
rust-version = "1.85"
description  = "Pure-Rust read-only VMware VMDK disk image reader (monolithicSparse, streamOptimized, twoGbMaxExtentFlat/Sparse, monolithicFlat)"
license      = "MIT"
authors      = ["Albert Hui"]
keywords     = ["forensics", "vmdk", "disk-image", "vmware", "container"]
categories   = ["parser-implementations", "filesystem"]
repository   = "https://github.com/SecurityRonin/vmdk-forensic"
homepage     = "https://github.com/SecurityRonin/vmdk-forensic"
documentation = "https://docs.rs/vmdk-core"
readme       = "../README.md"
exclude      = ["tests/data/", "fuzz/"]

[features]
test-helpers = []
serde = ["dep:serde"]
# Full multibyte descriptor decoding (Shift_JIS / GBK / Big5 / …) via `encoding_rs`.
# Off by default — the default build decodes UTF-8 + windows-1252 dependency-free.
full-encoding = ["dep:encoding_rs"]
# Forward internal diagnostics to the `tracing` ecosystem for structured,
# level-filtered debugging over untrusted images. Off by default — zero logging dep.
trace = ["dep:tracing"]

[[example]]
name = "emit_fixture"
required-features = ["test-helpers"]

[lib]
name = "vmdk"

[dependencies]
encoding_rs = { version = "0.8", optional = true }
thiserror = "2"
tracing   = { version = "0.1", optional = true }
flate2    = "1"
serde     = { version = "1", features = ["derive"], optional = true }
sha2      = "0.10"
md-5      = "0.10"

[dev-dependencies]
serde_json = "1"
tempfile  = "3"
proptest  = "1"

[lints]
workspace = true
