[package]
name         = "vmdk-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description  = "Pure-Rust read-only VMware VMDK disk image reader (monolithicSparse, streamOptimized, twoGbMaxExtentFlat/Sparse, monolithicFlat)"
license.workspace = true
authors      = ["Albert Hui"]
keywords     = ["forensics", "vmdk", "disk-image", "vmware", "container"]
categories   = ["parser-implementations", "filesystem"]
repository.workspace = true
homepage     = "https://github.com/SecurityRonin/vmdk-forensic"
documentation = "https://docs.rs/vmdk-core"
readme       = "../README.md"
exclude      = ["tests/data/", "fuzz/"]

[features]
test-helpers = []
serde = ["dep:serde"]
# Full multibyte descriptor decoding (Shift_JIS / GBK / Big5 / …) via `encoding_rs`.
# Off by default — the default build decodes UTF-8 + windows-1252 dependency-free.
full-encoding = ["dep:encoding_rs"]
# Forward internal diagnostics to the `tracing` ecosystem for structured,
# level-filtered debugging over untrusted images. Off by default — zero logging dep.
trace = ["dep:tracing"]

[[example]]
name = "emit_fixture"
required-features = ["test-helpers"]

[lib]
name = "vmdk"

[dependencies]
encoding_rs = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing   = { workspace = true, optional = true }
flate2    = { workspace = true }
serde     = { workspace = true, optional = true }
sha2      = { workspace = true }
md-5      = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile  = { workspace = true }
proptest  = { workspace = true }

[lints]
workspace = true
