[package]
name         = "vmdk-forensic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description  = "Forensic integrity analysis for VMware VMDK images — redundant-grain-directory adjudication, dangling-pointer scan, recovery triage, and header provenance"
license.workspace = true
authors      = ["Albert Hui"]
repository.workspace = true
homepage     = "https://github.com/SecurityRonin/vmdk-forensic"
documentation = "https://docs.rs/vmdk-forensic"
readme       = "README.md"
keywords     = ["forensics", "vmdk", "integrity", "anti-forensics", "vmware"]
categories   = ["parser-implementations", "filesystem"]

[features]
serde = ["dep:serde", "vmdk/serde", "forensicnomicon/serde"]

[dependencies]
vmdk  = { workspace = true }
forensicnomicon = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
vmdk = { workspace = true, features = ["test-helpers"] }

[lints]
workspace = true
