[package]
name    = "vmdk-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[[bin]]
name  = "fuzz_open"
path  = "fuzz_targets/fuzz_open.rs"
test  = false
doc   = false

[[bin]]
name  = "fuzz_read"
path  = "fuzz_targets/fuzz_read.rs"
test  = false
doc   = false

[[bin]]
name  = "fuzz_recover"
path  = "fuzz_targets/fuzz_recover.rs"
test  = false
doc   = false

[dependencies]
libfuzzer-sys = "0.4"
vmdk          = { path = "../vmdk" }
