[package]
name         = "vmdk-cli"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.85"
description  = "CLI tool for inspecting VMDK disk images"
license      = "MIT"

[[bin]]
name = "vmdk"
path = "src/main.rs"

[dependencies]
vmdk = { version = "0.1.0", path = "../vmdk" }
clap = { version = "4", features = ["derive"] }

[lints]
workspace = true
