[package]
name         = "vmdk-cli"
version      = "0.7.0"
edition      = "2021"
rust-version = "1.85"
description  = "CLI tool for inspecting VMDK disk images"
license      = "MIT"
repository   = "https://github.com/SecurityRonin/vmdk-core"
keywords     = ["forensics", "vmdk", "disk-image", "vmware"]
categories   = ["command-line-utilities", "filesystem"]
readme       = "../README.md"

[[bin]]
name = "vmdk"
path = "src/main.rs"

[dependencies]
vmdk = { version = "0.6.3", path = "../vmdk", package = "vmdk-core" }
vmdk-forensic = { version = "0.6.0", path = "../vmdk-forensic" }
# Canonical reporting vocabulary (Severity/Finding/Category) — every fleet crate
# that touches reporting depends on forensicnomicon directly, the single source of truth.
# serde feature: Finding serializes into the `--json` output.
forensicnomicon = { version = "0.3.0", path = "../../forensicnomicon", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
# test-helpers exposes vmdk::testutil so e2e tests can synthesise fixtures
# (deltas, matching-RGD images, differing-content pairs) for full CLI coverage.
vmdk = { version = "0.6.3", path = "../vmdk", package = "vmdk-core", features = ["test-helpers"] }

[lints]
workspace = true
