[package]
name         = "vmdk"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.85"
description  = "Pure-Rust read-only VMware VMDK sparse disk image reader"
license      = "MIT"
authors      = ["Albert Hui"]
keywords     = ["forensics", "vmdk", "disk-image", "vmware", "container"]
categories   = ["parser-implementations", "filesystem"]

[features]
test-helpers = []

[dependencies]
thiserror = "2"
flate2    = "1"

[dev-dependencies]
tempfile  = "3"
proptest  = "1"

[lints]
workspace = true
