[package]
name         = "vmdk"
version      = "0.2.0"
edition      = "2021"
rust-version = "1.85"
description  = "Pure-Rust read-only VMware VMDK disk image reader (monolithicSparse, streamOptimized, twoGbMaxExtentFlat/Sparse, monolithicFlat)"
license      = "MIT"
authors      = ["Albert Hui"]
keywords     = ["forensics", "vmdk", "disk-image", "vmware", "container"]
categories   = ["parser-implementations", "filesystem"]

[features]
test-helpers = []

[dependencies]
thiserror = "2"
flate2    = "1"

[dev-dependencies]
tempfile  = "3"
proptest  = "1"

[lints]
workspace = true
