[package]
name         = "vmdk"
version      = "0.2.0"
edition      = "2021"
rust-version = "1.85"
description  = "Pure-Rust read-only VMware VMDK disk image reader (monolithicSparse, streamOptimized, twoGbMaxExtentFlat/Sparse, monolithicFlat)"
license      = "MIT"
authors      = ["Albert Hui"]
keywords     = ["forensics", "vmdk", "disk-image", "vmware", "container"]
categories   = ["parser-implementations", "filesystem"]

[features]
test-helpers = []
serde = ["dep:serde"]

[dependencies]
thiserror = "2"
flate2    = "1"
serde     = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
tempfile  = "3"
proptest  = "1"

[lints]
workspace = true
